--- a/index.html
+++ b/index.html
@@ -1,30 +1,203 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<title>Name | Make Up Artist</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+	<!-- Nav Bar -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+	  <a class="navbar-brand" href="#">Logo</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+
+	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	    <ul class="navbar-nav mr-auto ">
+	      <li class="nav-item">
+	        <a class="nav-link" href="#about">About</a>
+	      </li>
+	      <li class="nav-item ">
+	        <a class="nav-link" href="#services">Services</a>
+	      </li>
+	      <li class="nav-item ">
+	        <a class="nav-link" href="#gallery">Gallery</a>
+	      </li>
+	      <li class="nav-item ">
+	        <a class="nav-link" href="#contact">Contact</a>
+	      </li>
+	    </ul>
+	  </div>
+	</nav>
+
+	<!-- Jumbotron -->
+	<div class="jumbotron" id="intro-text">
+		<h1>Make Up Artist Name or Business Name</h1>
+		<hr>
+		<p class="lead">"Small intro of services or quote can go here"</p>
+	</div>
+
+
+	<div class="container" id="about"> 
+
+		<!-- About Section -->
+		<h2 class="welcome">Welcome!</h2>
+
+		<div class="row">
+			<div class="col-md-5">
+				<img id="profile-pic" class="img-thumbnail" src="assets/profile-pic.svg">
+			</div>
+
+			<div class="col-md-7" id="bio-text">
+				Sample Text for Bio/About Data. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</div>
+		</div>
+
+		<!-- Services Section -->
+
+		<hr class="divider" id="services" >
+		<h2 class="services-text">Services</h2>
+		
+		<div class="row">
+			<div class="col-md-6">
+				<h4>Service 1</h4>
+
+				<p>Price 1 $9.99</p>
+					<ul>
+						<li class="lead">Brief description of the service at this price.</li>
+					</ul>
+
+				<p>Price 2 $19.99</p>
+					<ul>
+						<li class="lead">Brief description of the service at this price.</li>
+					</ul>
+
+				<p>Price 3 $29.99</p>
+					<ul>
+						<li class="lead">Brief description of the service at this price.</li>
+					</ul>
+			</div>
+
+			<div class="col-md-6">
+				<h4>Service 2 </h4>
+
+				<p>Price 1 $9.99</p>
+					<ul>
+						<li class="lead">Brief description of the service at this price.</li>
+					</ul>
+
+				<p>Price 2 $19.99</p>
+					<ul>
+						<li class="lead">Brief description of the service at this price.</li>
+					</ul>
+
+				<p>Price 3 $29.99</p>
+					<ul>
+						<li class="lead">Brief description of the service at this price.</li>
+					</ul>
+			</div>
+		</div>
+
+		<!-- End of Service Section -->
+
+		<!-- Sample Gallery Section -->
+		<hr class="divider" id="gallery">
+
+		<!-- Flex Gallery up to 6 photos -->
 		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+			<div class="gallery-container">
+				<img src="https://images.unsplash.com/photo-1503236823255-94609f598e71?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=885d5cb5256c28487047895a4161452f&auto=format&fit=crop&w=600&q=60">
+				
+				<img src="https://images.unsplash.com/photo-1503236823255-94609f598e71?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=885d5cb5256c28487047895a4161452f&auto=format&fit=crop&w=600&q=60">
+				<img src="https://images.unsplash.com/photo-1503236823255-94609f598e71?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=885d5cb5256c28487047895a4161452f&auto=format&fit=crop&w=600&q=60">
+				<img src="https://images.unsplash.com/photo-1503236823255-94609f598e71?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=885d5cb5256c28487047895a4161452f&auto=format&fit=crop&w=600&q=60">
+				<img src="https://images.unsplash.com/photo-1503236823255-94609f598e71?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=885d5cb5256c28487047895a4161452f&auto=format&fit=crop&w=600&q=60">
+				<img src="https://images.unsplash.com/photo-1503236823255-94609f598e71?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=885d5cb5256c28487047895a4161452f&auto=format&fit=crop&w=600&q=60">
+
+
+			</div>
+		</div>
+
+		<!-- CAROUSAL GALLERY ONLY 3 PICTURES -->
+<!-- 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+		  <ol class="carousel-indicators">
+		    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+		    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+		    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+		  </ol>
+		  <div class="carousel-inner">
+		    <div class="carousel-item active">
+		      <img class="d-block w-100" src="https://images.unsplash.com/photo-1520173043194-dc6b2a237fee?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=9da78404d02fafbd40afdf2b59dc2d9d&auto=format&fit=crop&w=600&q=60" alt="First slide">
+		    </div>
+		    <div class="carousel-item">
+		      <img class="d-block w-100" src="https://images.unsplash.com/photo-1487412912498-0447578fcca8?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d2f5a62e9061b2188b383b688e24f2ac&auto=format&fit=crop&w=600&q=60" alt="Second slide">
+		    </div>
+		    <div class="carousel-item">
+		      <img class="d-block w-100" src="https://images.unsplash.com/photo-1520173043194-dc6b2a237fee?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=9da78404d02fafbd40afdf2b59dc2d9d&auto=format&fit=crop&w=600&q=60" alt="Third slide">
+		    </div>
+		  </div>
+		  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
+		</div> -->
+
+
+	</div>
+
+	<!-- CONTACT SECTION -->
+	<hr class="contact-divide" id="contact">
+
+	<div class="jumbotron" id="main-contact">
+		<h3 class="contact-text">Contact Me</h3>
+
+		<p id="contact-intro" class="lead">For inquires or questions feel free to reach out to me </p>
+
+		<div class= "icon-container">
+			<a href="mailto:name@gmail.com">
+				<i class="fa fa-envelope-o contact-icon" aria-hidden="true"></i>
+			</a>
+
+			<a href="https://www.facebook.com/" target="_blank">
+				<i class="fa fa-facebook-official" aria-hidden="true"></i>
+			</a>
+			
+
+			<a href="https://www.instagram.com/">
+				<i class="fa fa-instagram" aria-hidden="true"></i>
+			</a>
+			
+
+			<a href="https://twitter.com/" target="_blank">
+				<i class="fa fa-twitter" aria-hidden="true"></i>
+			</a>
+		</div>
+
+	</div>
+
+	</div>
+
+
+
+	<!-- Footer -->
+	<footer>
+		<p>"Name will go here" Freelance Make Up Artist in City, State | Powered by Host Name | Address </p>
+	</footer>
+
+<!-- Script Lines from Bootstrap do not touch -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+</body>
 </html>
