--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 		<div class="row">
 			<div class="col-md-5">
-				<img id="profile-pic" class="img-thumbnail" src="assets/profile-pic.svg">
+				<img id="profile-pic" class="img-thumbnail" src="profile-pic.svg">
 			</div>
 
 			<div class="col-md-7" id="bio-text">
