--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 			</a>
 			
 
-			<a href="https://www.instagram.com/">
+			<a href="https://www.instagram.com/ target="_blank">
 				<i class="fa fa-instagram" aria-hidden="true"></i>
 			</a>
 			
